# arc-theme

./: HACKING.md  README.md  arc-theme-upgrade  configure.ac  rename-cont
common/: Makefile.am  index.theme-syd
common/cinnamon/: cinnamon-syd.css  cinnamon.css
common/cinnamon/sass/: _common.scss  _drawing.scss
common/gnome-shell/3.14/: gnome-shell-syd.css  gnome-shell.css
common/gnome-shell/3.14/sass/: _colors.scss  _common.scss  _drawing.scss  gnome-shell-syd.scss
common/gnome-shell/3.16/: gnome-shell-syd.css  gnome-shell.css
common/gnome-shell/3.16/sass/: _common.scss
common/gnome-shell/3.18/: gnome-shell-syd.css  gnome-shell.css
common/gnome-shell/3.18/sass/: _common.scss  _drawing.scss
common/gtk-2.0/: apps.rc  gtkrc  gtkrc-darker  gtkrc-syd  main.rc  render-assets.sh  xfce-notify.rc
common/gtk-2.0/menubar-toolbar/: menubar-toolbar-syd.rc  menubar-toolbar.rc
common/gtk-3.0/3.14/: gtk-darker.css  gtk-solid-darker.css  gtk-solid-syd.css  gtk-solid.css  gtk-syd.css  gtk.css
common/gtk-3.0/3.14/sass/: _applications.scss  _colors.scss  _common.scss  _transparent_widgets.scss
common/gtk-3.0/3.16/: gtk-darker.css  gtk-solid-darker.css  gtk-solid-syd.css  gtk-solid.css  gtk-syd.css  gtk.css
common/gtk-3.0/3.16/sass/: _applications.scss  _common.scss  _transparent_widgets.scss  _unity.scss  gtk-solid-syd.scss  gtk-syd.scss
common/gtk-3.0/3.18/: gtk-darker.css  gtk-solid-darker.css  gtk-solid-syd.css  gtk-solid.css  gtk-syd.css  gtk.css
common/gtk-3.0/3.18/sass/: _applications.scss  _common.scss  _drawing.scss  _lightdm.scss  _transparent_widgets.scss  _unity.scss
common/gtk-3.0/3.20/: assets.txt  gtk-darker.css  gtk-solid-darker.css  gtk-solid-syd.css  gtk-solid.css  gtk-syd.css  gtk.css
common/gtk-3.0/3.20/sass/: _applications.scss  _common.scss  _drawing.scss  _lightdm.scss  _transparent_widgets.scss  _unity.scss
common/metacity-1/: metacity-theme-1.xml  metacity-theme-2-syd.xml  metacity-theme-3.xml
common/xfwm4/: render-assets.sh
extra/Chrome/arc-syd-theme/arc-dark-theme/: manifest.json
